--- a/package.json
+++ b/package.json
@@ -37,9 +37,16 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "3.1.1",
     "@storybook/react": "^5.2.0",
-    "babel-cli": "^6.26.0"
+    "@types/react": "^16.9.2",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
+    "babel-cli": "^6.26.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.0",
+    "prettier": "^1.18.2",
+    "react-scripts": "3.1.1"
   },
   "peerDependencies": {
     "react": "^16.9.0",
